<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Givetrack</string>
    <string name="app_id">{$applicationId}</string>
    <string name="removal_error_message">An unexpected error occurred; could not remove %s from your search results.</string>
    <string name="network_error_message">There is a problem with the network. Please check your connection and try again.</string>
    <string name="payment_error_message">The request could not be processed. Please check that your method of payment is valid and try again.</string>
    <string name="provider_error_message">"Unable to establish a connection with %s. Please try again later.</string>
    <string name="create_error_message">%s: Failed to create file from path</string>
    <string name="output_error_message">%s: Failed to generate output stream from file directory</string>
    <string name="location_error_message">Response from location update permission request generated a Security Exception: %s</string>
    <string name="loader_error_message">Loader Not Implemented: %d</string>
    <string name="invalid_swipe_message">Unhandled swipe direction</string>
    <string name="remit_error">The payment feature is not available at this time..</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_recalibrate">Recalibrate Gifts</string>
    <string name="action_clear">Clear Charities</string>
    <string name="action_magnitude_label">Adjustment Magnitude</string>
    <string name="action_toggle_on">Toggle overlay on</string>
    <string name="action_toggle_off">Toggle overlay off</string>
    <string name="action_overlay">Apply overlay</string>
    <string name="dialog_option_cancel">CANCEL</string>
    <string name="dialog_option_erase">ERASE</string>
    <string name="dialog_option_return">RETURN</string>
    <string name="dialog_option_keep">KEEP</string>
    <string name="dialog_option_change">CHANGE</string>
    <string name="dialog_option_confirm">OK</string>
    <string name="dialog_option_decline">NO</string>
    <string name="dialog_option_remove">REMOVE</string>
    <string name="dialog_option_later">REMIND ME LATER</string>
    <string name="dialog_option_start">GET STARTED</string>
    <string name="description_close_button">Press this button to close this view</string>
    <string name="description_open_button">Press this button to expand this view</string>
    <string name="description_charity_logo">This is the logo that corresponds to the listed charity</string>
    <string name="description_refresh_button">Press this button to refresh the list of charities</string>
    <string name="description_collected_add_button">Press this button to add this charity to your collection</string>
    <string name="description_collected_remove_button">Press this button to remove this charity from your collection</string>
    <string name="description_change_button">Press this button to change the color of the ribbon</string>
    <string name="description_detect_location">Press this button to detect your current location</string>
    <string name="description_credit_button">Press this button to add to your credit by %s</string>
    <string name="description_credit_toggle_button">Press this button to change the response of the big circle button. The current response is to add credit by %s</string>
    <string name="description_donation_text">Press this button to add to your total donation amount. The total amount that will be allocated among your charities on each converted smile or stride is %s</string>
    <string name="description_decrement_donation_text">Press this button to decrease your total donation amount</string>
    <string name="description_increment_donation_text">Press this button to increase your total donation amount</string>
    <string name="description_decrement_percentage_text">Press this button to decrease the percentage of your total donation amount to be allocated to this charity on each converted smile or stride</string>
    <string name="description_increment_percentage_text">Press this button to increase the percentage of your total donation amount to be allocated to this charity on each converted smile or stride</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_index">Search Results</string>
    <string name="title_activity_journal">Past Activity</string>
    <string name="title_charity_detail">Charity Detail</string>
    <string name="title_activity_config">Settings</string>
    <string name="title_activity_reward">Coin Generator</string>
    <string name="title_activity_remit">Remit Gift</string>
    <string name="nav_header_title">Givetrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_menu_interact">Interact</string>
    <string name="nav_menu_manage">Manage</string>
    <string name="nav_menu_learn">Learn</string>
    <string name="nav_item_index">Search</string>
    <string name="nav_item_reward">Credit</string>
    <string name="nav_item_journal">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_cn">About Charity Navigator API</string>
    <string name="nav_item_clearbit">About Clearbit API</string>
    <string name="url_cn">https://www.charitynavigator.org/index.cfm?bay=content.view&amp;cpid=1397</string>
    <string name="url_clearbit">https://clearbit.com/</string>
    <string name="tab_text_1">Tabulate</string>
    <string name="tab_text_2">Visualize</string>
    <string name="historical_dialog_message">Do you want to change back to the current date after recording the next donation?</string>
    <string name="anchor_dialog_message">Do you want to change the date to %s for recording gifts?</string>
    <string name="fui_tos_and_pp">By continuing, you are indicating that you accept our %1$s and %2$s. Charity data and logos powered by Charity Navigator and Clearbit API.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="dialog_description_account_deletion">Are you sure you want to delete your account? Your data will be erased and cannot be recovered.</string>
    <string name="message_logout">You successfully logged out</string>
    <string name="message_data_erase">Your account has been erased</string>
    <string name="message_login">You successfully logged in as %s</string>
    <string name="message_password_request">Please confirm your password to proceed.</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="message_billing_client">Billing client is ready</string>
    <string name="dialog_balance_preview">Earn 20 coins by viewing a promotion. Redeem 200 coins for a free pass to Givetrack Paid for a friend. Go to coded.art/givetrack for more details on rewards and redemption.</string>
    <string name="reward_response">earning reward</string>
    <string name="payment_response">making a payment</string>
    <string name="description_reward_text">Your available rewarded credit is %s</string>
    <string name="description_payment_text">Your available paid credit is %s</string>
    <string name="description_wallet_text">Your total available credit is %s</string>
    <string name="dialog_later">REMIND ME LATER</string>
    <string name="dialog_start">GET STARTED</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="dialog_message_current">Do you want to set the date of gifts to current?</string>
    <string name="dialog_message_recalibrate">Do you want to allocate the same percentage of dentations to each charity? The change is not permanent as you can still manually adjust the allocations afterward.</string>
    <string name="dialog_description_magnitude_adjustment">Change the magnitude of increments and decrements.The current magnitude is %s</string>
    <string name="dialog_filter_setup">To set up your search filters, click the icon in the top right corner, or press \'Get Started\'.</string>
    <string name="message_remove_entry">Remove %s from your %s?</string>
    <string name="message_clear_all">Your %ss will not be recoverable except by %s them again. Are you sure you want to permanently delete all of your %ss?</string>
    <string name="message_update_email">Confirm your account email and password.</string>
    <string name="snippet_all_charities">all charities</string>
    <string name="message_empty_collection">Your charity collection is empty!\nAdd charities here:</string>
    <string name="message_record_refresh">Your records have been updated.</string>
    <string name="message_spawn_refresh">Your search results have been refreshed.</string>
    <string name="message_generated_remove">%s has been removed from your search results. </string>
    <string name="message_collected_add">"%s has been added to your collection"</string>
    <string name="message_collected_remove">"%s has been removed from your collection"</string>
    <string name="indicator_donation_frequency">Gifts: %s</string>
    <string name="indicator_donation_impact">Impact: %s</string>
    <string name="axis_value_high">All-time high</string>
    <string name="axis_value_this">This %s</string>
    <string name="axis_value_yester">Yester%s</string>
    <string name="axis_value_interval">%d %ss Ago</string>
    <string name="axis_value_alltime">%sly High</string>
    <string name="axis_value_daily">Daily</string>
    <string name="axis_value_donation">Donated</string>
    <string name="chart_title_timing">Historical Scope</string>
    <string name="chart_title_average">Impact Distribution</string>
    <string name="chart_title_activity">Recent Activity</string>
    <string name="chart_title_usage">Record Highs</string>
    <string name="chart_title_percentage">Gift Recipients</string>
    <string name="charts_title"><u>Giving</u></string>
    <string name="symbol_increment_button">+</string>
    <string name="symbol_decrement_button">—</string>
    <string name="pref_indexTerm_key" translatable="false">indexTerm</string>
    <string name="pref_indexCity_key" translatable="false">indexCity</string>
    <string name="pref_indexState_key" translatable="false">indexState</string>
    <string name="pref_indexZip_key" translatable="false">indexZip</string>
    <string name="pref_indexPages_key" translatable="false">indexPages</string>
    <string name="pref_indexSize_key" translatable="false">indexRows</string>
    <string name="pref_indexMinrating_key" translatable="false">indexMinrating</string>
    <string name="pref_header_user">User</string>
    <string name="pref_header_index">Search</string>
    <string name="pref_header_give">Home</string>
    <string name="pref_header_record">History</string>
    <string name="pref_header_advanced">Advanced</string>
</resources>